update varibales